# mumdex_conda

./: .gitignore  LICENSE  README.md  environment.yml  mumdex.yaml  mumdex_python.yaml  python_mumdex.cpp  setup.py
conda.recipe/: README.txt  meta.yaml
scripts/: bridge_finder.py  bridge_info.py  bridge_tester.py  candidate_finder.py  check_bridges.py  chromosome_bridges.py  compare_count_invariants.py  compare_inv_counts_by_length_of_ms.py  count_invariants.py  count_invariants_bed.py  load_counts.py  mumdex2txt.py  mumdex2txt_bed.py  show_mums.py  test_python_mumdex.py
src/: CMakeLists.txt  CMakeLists.txt~  check_for_pseudogene.cpp  even.cpp  files.cpp  files.cpp~  find_bridge.cpp  genes.cpp  karyotype.cpp  merge_mumdex.cpp  merge_mumdex.cpp~  mumdex.h  pop2txt.cpp  python_mumdex.cpp  python_mumdex.cpp~  utility.cpp  utility.cpp~  x11plot.cpp
src/mumdex/: __init__.py
src/mumdex.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
