cmake_minimum_required(VERSION 3.0)
project(mumdex)
find_package(X11)
find_package(GSL REQUIRED)
include_directories(${GSL_INCLUDE_DIRS})
find_package (Python COMPONENTS Interpreter Development)
find_package (Python HINTS /mnt/wigclust23/data/safe/yamrom/work/miniconda3/envs/cmake)
find_package(PythonLibs REQUIRED)
include_directories(${PYTHON_INCLUDE_DIRS})

file(GLOB SRC_FILES "*.cpp")

foreach (file ${SRC_FILES})
  # message(STATUS ${file})
  get_filename_component(target ${file} NAME_WE)
  #if (DEFINED target AND NOT "${target}" STREQUAL "")
  #  message(STATUS "Variable 'target' is defined and not empty: ${target}")
  #else ()
  #  message(STATUS "Variable 'target' is either not defined or empty")
  #endif ()
  
  message(STATUS "${target}") 
  if ( ${target} STREQUAL "utility" OR ${target} STREQUAL "files" OR ${target} STREQUAL "sequence" OR ${target} STREQUAL "sequencing_reads" OR ${target} STREQUAL "genes")
	add_library(${target} ${file})
  else ( ${target} STREQUAL "utility" OR ${target} STREQUAL "files" OR ${target} STREQUAL "sequence" OR ${target} STREQUAL "sequencing_reads" OR ${target} STREQUAL "genes")
	add_executable (${target} ${file})
  endif ( ${target} STREQUAL "utility" OR ${target} STREQUAL "files" OR ${target} STREQUAL "sequence" OR ${target} STREQUAL "sequencing_reads" OR ${target} STREQUAL "genes")
  target_include_directories(${target} PRIVATE ${CMAKE_SOURCE_DIR} )
endforeach (file ${SRC_FILES})

add_library(x11plot STATIC x11plot.h)
set_target_properties(x11plot PROPERTIES LINKER_LANGUAGE CXX)

target_link_libraries ( population_denovos PUBLIC utility )
target_link_libraries ( population_bridges PUBLIC utility )
target_link_libraries ( merge_mumdex PUBLIC files )
target_link_libraries ( mummer PUBLIC files )
target_link_libraries ( mview PRIVATE x11plot ${X11_LIBRARIES})
target_link_libraries ( test_beta PUBLIC ${GSL_LIBRARIES} )
target_link_libraries ( bridges2txt PUBLIC utility )
target_link_libraries ( map2txt PUBLIC utility )
target_link_libraries ( mumdex2txt PUBLIC utility )
target_link_libraries ( mumdex2txt_fast PUBLIC utility )
target_link_libraries ( pop2txt PUBLIC utility )
target_link_libraries ( mumdex2sam PUBLIC utility )
target_link_libraries ( mumdex2sam PUBLIC files )
target_link_libraries ( mumdex2txt PUBLIC files )
target_link_libraries ( mumdex2txt_fast PUBLIC files )
target_link_libraries ( namepair PUBLIC utility )
target_link_libraries ( namepair_full PUBLIC utility )
target_link_libraries ( find_bridge PUBLIC utility )
target_link_libraries ( find_indel PUBLIC utility )
target_link_libraries ( check_bridges_result PUBLIC utility )
target_link_libraries ( check_bridges PUBLIC utility )
target_link_libraries ( check_bridges PUBLIC files )
target_link_libraries ( check_mappability PUBLIC files )
target_link_libraries ( check_mumdex PUBLIC utility )
target_link_libraries ( check_cand_cn PUBLIC ${GSL_LIBRARIES} )
target_link_libraries ( check_for_pseudogene PUBLIC genes )
target_link_libraries ( find_diploid_exons PUBLIC genes )
target_link_libraries ( extract_cn_segments PUBLIC genes )
target_link_libraries ( extract_cn_segments PUBLIC ${GSL_LIBRARIES} )
target_link_libraries ( smash PUBLIC files )
target_link_libraries ( smash PUBLIC utility )
target_link_libraries ( pop_cn PUBLIC files )
target_link_libraries ( pop_cn PUBLIC utility )
target_link_libraries ( pop_cn PUBLIC genes )
target_link_libraries ( pop_cn PUBLIC ${GSL_LIBRARIES} )
target_link_libraries ( ggraph PUBLIC x11plot ${X11_LIBRARIES} )
target_link_libraries ( ggraph PUBLIC genes )
target_link_libraries ( anchor_reads PUBLIC genes )
target_link_libraries ( anchor_reads PUBLIC utility )
target_link_libraries ( anchor_repeatness PUBLIC files )
target_link_libraries ( show_pairs PUBLIC utility )
target_link_libraries ( show_pairs PUBLIC files )
target_link_libraries ( show_mums PUBLIC utility )
target_link_libraries ( show_mums PUBLIC files )
target_link_libraries ( show_counts_special PUBLIC utility )
target_link_libraries ( show_counts_special PUBLIC files )
target_link_libraries ( show_counts PUBLIC utility )
target_link_libraries ( show_counts PUBLIC files )
target_link_libraries ( show_all_counts PUBLIC utility )
target_link_libraries ( show_all_counts PUBLIC files )
target_link_libraries ( repeatness PUBLIC files )
target_link_libraries ( count_anchors PUBLIC files )
target_link_libraries ( count_genes PUBLIC files )
target_link_libraries ( count_genes PUBLIC genes )
target_link_libraries ( count_genes PUBLIC utility )
target_link_libraries ( count_pseudogenes PUBLIC files )
target_link_libraries ( count_pseudogenes PUBLIC genes )
target_link_libraries ( count_pseudogenes PUBLIC utility )
target_link_libraries ( denovo_cn PUBLIC ${GSL_LIBRARIES} )
target_link_libraries ( denovo_pseudogenes PUBLIC files )
target_link_libraries ( denovo_pseudogenes PUBLIC genes )
target_link_libraries ( denovo_pseudogenes PUBLIC utility )
target_link_libraries ( mumdex_examples PUBLIC utility )
target_link_libraries ( position_coverage PUBLIC utility )
target_link_libraries ( explore_coverage PUBLIC utility )
target_link_libraries ( plot_coverage PUBLIC utility )
